header navbar expansion fix, score wrap fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,6 @@ html, body {
   height: 100%;
 }
 
+html {
+  overflow-y: scroll;
+}
